--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Kanit";
+  text-align: center;
 }
 
 h1,
@@ -14,15 +15,17 @@ h3 {
   color: #000;
 }
 
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Download Buttons */
+
 .download-btn {
-  margin: 5% 3% 0;
+  margin: 5% 3% 5% 0;
 }
 
 /* Navbar */
-
-.container-fluid {
-  padding: 3% 10% 7%;
-}
 
 .navbar {
   padding-bottom: 4.5rem;
@@ -48,6 +51,11 @@ h3 {
 #title {
   background-color: #ff4c68;
   color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
 }
 
 .title-icons {
@@ -71,7 +79,6 @@ h3 {
 
 #features {
   color: #8f8f8f;
-  padding: 7% 15%;
   background-color: #fff;
   position: relative;
 }
@@ -82,7 +89,6 @@ h3 {
 
 .feature-box {
   padding: 5% 5%;
-  text-align: center;
 }
 
 .features-text {
@@ -94,7 +100,6 @@ h3 {
 
 #testimonials {
   background-color: #ef8172;
-  text-align: center;
   color: #fff;
 }
 
@@ -102,10 +107,6 @@ h3 {
   border-radius: 100%;
   width: 10%;
   margin: 20px;
-}
-
-.carousel-item {
-  padding: 7% 15%;
 }
 
 .testimonial-text {
@@ -117,7 +118,6 @@ h3 {
 #press {
   background-color: #ef8172;
   padding-bottom: 3%;
-  text-align: center;
 }
 
 .press-logo {
@@ -129,7 +129,6 @@ h3 {
 
 #pricing {
   padding: 5%;
-  text-align: center;
 }
 
 .pricing-column {
@@ -149,8 +148,6 @@ h3 {
 
 #cta {
   background-color: #ff4c68;
-  text-align: center;
-  padding: 5% 3%;
 }
 
 .cta-text {
@@ -162,8 +159,6 @@ h3 {
 #footer {
   background-color: #fff;
   color: #8f8f8f;
-  text-align: center;
-  padding: 3% 3%;
 }
 
 /* Media Queries for Responsiveness */
